refactor: Use virtual threads for file watcher